--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ uvicorn[standard]==0.35.0
 pydantic==2.11.9
 pydantic-settings==2.10.1
 python-dotenv==1.1.1
+requests==2.32.5
 supabase==2.18.1
 openai==1.107.3
 httpx==0.28.1
